Removal of guava